cbaf 1.8.0 - 2019-10-28
-------------------------

New Features

- Optimization has led obtainOneStudy() and obtainMultipleStudies() functions to
  work faster.

- If an entered cancer has corrupted data or lacks the requested data type,
  obtainMultipleStudies() doesn't return error. That study is automatically
  omitted from results and its name is printed on console.

- AvailableData() function now works more accurately but unfortunately, it is
  generally slower: Due to inconsistancy in the terms that cgdsr uses,
  AvailableData() has to check the availability of the data at two different
  levels.





cbaf 1.6.0 - 2019-04-28
-------------------------

New Features

- heatmapOutput now uses a more accurate algorithm for determining the margins.

- Terms updates. Package can recongize more cancers!






cbaf 1.4.0 - 2018-10-30
-------------------------

New Features

- obtainOneStudy() and obtainMultipleStudies() functions can obtain data for
  groups of genes each possess more than 250 genes (Virtually unlimited gene
  number).

- A new argument for xlsxOutput() function to exchange the columns and rows.





cbaf 1.2.0 - 2018-04-26
-------------------------

New Features

- heatmapOutput() can now determine the heatmap margines and column and row
  name sizes automatically.

- New image formats TIFF, JPG and BMP in addition to the previous PNG file
  format for heatmapOutput(). They can be chosen from processOneStudy() and
  processMultipleStudies or directly from heatmapOutput() function.

- heatmapOutput() now uses two methods for ranking the genes prior to generating
  heatmap(s). One of them is suited for finding genes that have unique high
  values in one or few cancer studies whereas the other method aids in
  detemining genes that possess high values in multiple / many cancers.

- If function argumnets are entered wrongly, more meaningful errors will appear.

- All functions are improved.





cbaf 1.0.0 - 2017-09-10
-------------------------
