@@ -8,8 +8,8 @@
 #' \tabular{lllll}{
 #' Package: \tab cbaf \cr
 #' Type: \tab Package \cr
-#' Version: \tab 1.7.2 \cr
-#' Date: \tab 2019-05-18 \cr
+#' Version: \tab 1.9.1 \cr
+#' Date: \tab 2020-01-01 \cr
 #' License: \tab Artistic-2.0 \cr
 #' }
 #'
@@ -193,17 +193,25 @@ obtainMultipleStudies <- function(
 
             "mRNA Expression Zscores, RSEM (Batch normalized from Illumina HiSeq_RNASeqV2)",
 
+            "mRNA Expression z-Scores (RNA Seq FPKM)",
+
             "mRNA Expression z-Scores (RNA Seq RPKM)",
 
-            "mRNA expression z-Scores")
+            "mRNA expression z-scores (RNA-Seq)",
+
+            "mRNA expression z-Scores",
+
+            "mRNA Expression z-Scores")
 
       } else if(desiredTechnique == "microRNA-Seq"){
 
         L1.characteristics <-
 
-          c("Tumors with microRNA data (microRNA-Seq)",
+          c("Tumor Samples with microRNA data (microRNA-Seq)",
 
-            "Tumor Samples with microRNA data (microRNA-Seq)")
+            "Tumors with microRNA data (microRNA-Seq)",
+
+            "Samples with microRNA data (microRNA-Seq)")
 
         L2.characteristics <-
 
@@ -224,6 +232,8 @@ obtainMultipleStudies <- function(
             "Tumor Samples with mRNA data (U133 microarray only)",
 
             "Samples with mRNA data (U133 microarray)",
+
+            "Samples with mRNA data (U133 microarray only)",
 
             "Tumors with mRNA data",
 
