@@ -21,8 +21,8 @@ directory. This helps users to obtain the fresh data from cbioportal.org.
 \tabular{lllll}{
 Package: \tab cbaf \cr
 Type: \tab Package \cr
-Version: \tab 1.7.2 \cr
-Date: \tab 2019-05-18 \cr
+Version: \tab 1.9.1 \cr
+Date: \tab 2020-01-01 \cr
 License: \tab Artistic-2.0 \cr
 }
 }
